- fixed some missing touch responses in the intro
- improved Gadgetbridge logging
- fixed WeatherSpec bug regarding air pressure (pressure was displayed x100 too high)
- improved app launch time by preventing multiple initializations of the stations list
- improved stability by introducing a lock to ensure that the area database is only built once
- added widget margins to avoid cropping of content in the rounded widget corners
- modified widget backgrounds to comply with the sdk recommendations
- the classic widget is now dynamic and shows the information of the former large widget if there is enough space
- the large widget got retired (merged with classic widget)
- added dynamic widget preview layouts and new widget descriptions
- modified the permitted widget sizes on api >=31 to improve the appearance
- widgets now better display on launchers allowing display rotation
- renamed the widgets to better reflect their information
- fixed date & time not updated correctly at various places inside the app when the locale changed while the app was running
- removed the data update logic based on AlarmManager and JobWorker using a foreground service for updates
- implemented new update logic based on sync adapter
- now necessary new permissions to manage the sync adapter: AUTHENTICATE_ACCOUNTS, WRITE_SYNC_SETTINGS, READ_SYNC_SETTINGS
- syncs in the background won't waste battery when no suitable network is available or when the device is idle
- syncs won't occur when the user disables background syncs
- to better adapt to other apps and their data sync, the sync intervals are now inexact
- the user can now decide in detail which data should be synced in the background
- the settings for syncs are now unified in a new category called "sync settings"
- the user-triggered updates now only reload the data necessary for the view visible
- added dialog to ask if the favorites should be really deleted