@@ -145,6 +145,13 @@
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/chartwidget" />
         </receiver>
 
+        <receiver android:name=".GadgetbridgeBroadcastReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="de.kaffeemitkoffein.broadcast.REQUEST_UPDATE" />
+            </intent-filter>
+        </receiver>
+
+
         <receiver android:name=".AlarmClockUpdatedReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.app.action.NEXT_ALARM_CLOCK_CHANGED" />
@@ -184,6 +191,7 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter"/>
         </service>
+        <service android:name=".GadgetbridgeJobService" android:enabled="true" android:exported="false" android:permission="android.permission.BIND_JOB_SERVICE" />
 
     </application>
 
