@@ -413,6 +413,11 @@
                 android:entryValues="@array/cache_warnings_time_values"
                 android:defaultValue="2"/>
 
+        <Preference
+                android:key="PREF_battery"
+                android:title="@string/battery_title"
+                android:summary="@string/battery_summary"/>
+
         <CheckBoxPreference
                 android:key="PREF_use_metered_networks"
                 android:title="@string/preference_meterednetwork_title"
